make.out
src/Reuleaux.cc: In member function ‘virtual bool ReuleauxTriangle::ContainedBy(Polygon&)’:
src/Reuleaux.cc:54:43: error: ‘class Polygon’ has no member named ‘vertices’; did you mean ‘std::vector<Point> Polygon::vertices_’? (not accessible from this context)
   54 |     std::vector<Point> vertices = polygon.vertices();
      |                                           ^~~~~~~~
In file included from src/Reuleaux.cc:4:
include/Polygon.h:24:24: note: declared private here
   24 |     std::vector<Point> vertices_;
      |                        ^~~~~~~~~
src/Reuleaux.cc:55:8: error: ‘isInside’ was not declared in this scope
   55 |     if(isInside(vertices,vertices.size(),vertice1_) && isInside(vertices,vertices.size(),vertice2_) && isInside(vertices,vertices.size(),vertice3_)){
      |        ^~~~~~~~
src/Reuleaux.cc: In member function ‘virtual bool ReuleauxTriangle::ContainedBy(Polygon&)’:
src/Reuleaux.cc:55:8: error: ‘isInside’ was not declared in this scope
   55 |     if(isInside(vertices,vertices.size(),vertice1_) && isInside(vertices,vertices.size(),vertice2_) && isInside(vertices,vertices.size(),vertice3_)){
      |        ^~~~~~~~
tests/PolygonPolygonTest.cc: In member function ‘virtual void PolygonPolygon_Edge_Test::TestBody()’:
tests/PolygonPolygonTest.cc:75:29: error: ‘vertices1’ was not declared in this scope; did you mean ‘vertices2’?
   75 |     Polygon inner = Polygon(vertices1);
      |                             ^~~~~~~~~
      |                             vertices2
